@startuml
class Loader {
- {static} int NUM_ARTICULOS_INI
- {static} int NUM_TIPO_ARTICULOS
- {static} int NUM_BALDAS
- {static} int NUM_CELDAS
- {static} int MIN_PRECIO
- {static} int MAX_PRECIO
- {static} int numeroArticulo
- {static} Random generadorAleatorio
+ {static} void cargarDatos(Armario)
- {static} int getAleatorio(int)
- {static} int getAleatorio()
- {static} String getTipoArticulo(int)
}
class Armario {
- int LIMITE_BALDAS
- Balda balda1
- Balda balda2
- Balda balda3
- Balda balda4
+ <<Create>> Armario()
+ Balda getBalda(int)
+ int getCantidadArticulos()
+ int getCapacidadArticulos()
+ Posicion estaArticulo(String)
+ Posicion insertarArticulo(Articulo)
+ boolean insertarArticulo(Articulo,Posicion)
+ Posicion sacarArticulo(String)
+ void pintar()
}
class App {
- {static} int OPC_EXIT
- {static} int OPC_DISPLAY
- {static} int OPC_QUERY
- {static} int OPC_INSERT_FIRST
- {static} int OPC_INSERT_POSITION
- {static} int OPC_REMOVE
- Armario armario
+ <<Create>> App()
+ void run()
- boolean ejecutarOpcion(int)
}
class Articulo {
- String id
- String nombre
- double precio
+ <<Create>> Articulo(String,String,double)
+ <<Create>> Articulo()
+ String getId()
+ void setId(String)
+ String getNombre()
+ void setNombre(String)
+ double getPrecio()
+ void setPrecio(double)
+ String toString()
}
class Gui {
+ {static} void mostrarMenu()
+ {static} int leerOpcion()
+ {static} String leerIdArticulo()
+ {static} Articulo leerArticulo()
+ {static} Posicion leerPosicion()
+ {static} boolean leerConfirmacion(String,String)
}
class Balda {
- int LIMITE_CELDAS
- Celda celda1
- Celda celda2
- Celda celda3
- Celda celda4
- Celda celda5
+ <<Create>> Balda()
+ int getCantidadCeldas()
+ Celda getCelda(int)
+ int getCantidadArticulos()
+ int getCapacidadArticulos()
+ boolean haySitio()
+ int estaArticulo(String)
+ int insertarArticulo(Articulo)
+ boolean insertarArticulo(Articulo,int)
+ int sacarArticulo(String)
+ void pintar()
}
class Celda {
- int LIMITE_ARTICULOS
- int cantidadArticulos
- Articulo articulo1
- Articulo articulo2
- Articulo articulo3
- Articulo articulo4
+ <<Create>> Celda()
+ int getCapacidadArticulos()
+ void setArticulo(Articulo,int)
+ Articulo getArticulo(int)
+ int getCantidadArticulos()
- boolean esArticulo(String,int)
- boolean estaVacio(int)
+ boolean haySitio()
+ boolean estaArticulo(String)
+ boolean insertarArticulo(Articulo)
+ boolean sacarArticulo(String)
+ void pintar()
}
class Main {
+ {static} void main(String[])
}
class Posicion {
- int numeroBalda
- int numeroCelda
+ <<Create>> Posicion(int,int)
+ int getNumeroBalda()
+ void setNumeroBalda(int)
+ int getNumeroCelda()
+ void setNumeroCelda(int)
+ String toString()
}

Main .right.> App
App -right-> Armario
App .up.> Loader
App .down.> Gui
Armario *-> Balda
Balda *-> Celda
Celda *-down-> Articulo
Armario .down.> Posicion
Armario .down.> Articulo
Gui .right.> Posicion
Gui .down.> Articulo
Balda ..> Articulo
App ..> Posicion
App ..> Articulo

@enduml